# arbuni-processor

./: Cargo.toml  uniswap-schema.json
migrations/: 20221118171822_create_tokens.up.sql  20221118171823_create_pools.up.sql
queries/: pools.graphql
src/: balancer.rs  cycler.rs  db.rs  explorer.rs  main.rs
src/models/: mod.rs  pool.rs  pool_query.rs  token.rs
