[package]
name = "arbuni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
dotenv = "0.15.0"
graphql_client = "0.11.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.88"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "migrate", "macros", "uuid", "chrono", "json"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
